# ggenie

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile
assets/: tank.aseprite  tank_wars.ldtk
assets/MikroRPG/: MAin.aseprite  MIkroRPG.pur
assets/shaders/: color.frag  default.vert
bindings/: PyAnimation.cpp  PyEntity.cpp  PySprite.cpp  PyTransform.cpp  engine.cpp  engine.h  gg.pyi  main.py
include/: asset_store.h  ecs.h
include/components/: sprite.h  transform.h
include/events/: collision.h  event.h  event_bus.h
include/systems/: animation.h  collision.h  debug.h  movement.h  render.h
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/imgui/: CMakeLists.txt  imgui_impl_glfw.cpp
libs/ldtk/lib/cmake/LDtkLoader/: LDtkLoaderConfig.cmake
libs/sol/: sol.hpp
src/: main.cpp
src/AssetStore/: asset_store.cpp  asset_store.h
src/Components/: animation.h  rigid_body.h  sprite.h  transform.h
src/ECS/: ecs.cpp  ecs.h  registry.cpp  registry.h
src/ECS/Components/: animation.h  collider.h  rigid_body.h
src/ECS/Events/: collision.h  event.h  event_bus.h
src/ECS/Events/types/: key_pressed.h
src/ECS/Systems/: animation.h  collision.h  debug.h  input.h  movement.h  render.h
src/Game/: game.cpp  game.h  sdl_game.cpp  sdl_game.h
src/Graphics/: index_buffer.cpp  index_buffer.h  pyrenderer.cpp  pyrenderer.h  renderer.cpp  renderer.h  shader.cpp  shader.h  sprite_renderer.cpp  sprite_renderer.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_layout.cpp  vertex_buffer_layout.h
src/Logger/: logger.cpp  logger.h
src/System/: animation.h  movement.h  render.h
src/Utils/: files.cpp  files.h  logger.cpp
